# image-retrieval-poc

./: .gitignore  README.md  pyproject.toml
dataset/paris6k/: query_images.txt
src/data/: __init__.py  paris6k.py
src/inference/: clip_embeddings.py  dino_embeddings.py  dinov2_embeddings.py
src/models/: __init__.py  clip.py  dino.py
src/notebooks/: image-retrieval-test.ipynb  image_retrieval.ipynb  image_retrieval_clip.ipynb  image_retrieval_dino.ipynb  image_retrieval_dinov2.ipynb  visualize_embeddings.ipynb  visualize_embeddings_clip.ipynb  visualize_embeddings_dino.ipynb  visualize_embeddings_dinov2.ipynb
src/utils/: __init__.py  embeddings.py  preprocessing.py  retrieval.py
