[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "image-retrieval-poc"
version = "0.1.0"
authors = [{ name="Morris Florek", email="morris.benedikt.florek@uni-weimar.de" },]
description = "A proof of concept for image retrieval using deep learning."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy",
    "open_clip_torch",
    "scikit-learn",
    "tqdm",
]

